Added connect and disconnect event handlers

--- a/public/index.html
+++ b/public/index.html
@@ -8,3 +8,17 @@
     <p>Hello Socket</p>
   </body>
 </html>
+
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  var socket = io();
+
+  socket.on('connect', ()=>{
+    console.log('Connected to server!');
+  });
+
+  socket.on('disconnect', () => {
+    console.log('Disconnected to server!');
+  });
+
+</script>
