Added google geolocation message

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       <input type="text" name="form-text" placeholder="Enter message" id="form-text">
       <input type="submit" name="sub-btn" id="sub-btn" value="Send">
     </div>
+    <button type="button" id="geo-btn" name="button">Send location</button>
 
     <ul id="chat-ul"></ul>
   </body>
