Added human time format in chat and little improvements

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <h2>Welcome to the Chat App</h2>
 
     <div id="chat-form">
-      <input type="text" name="form-text" placeholder="Enter message" id="form-text">
+      <input type="text" name="form-text" placeholder="Enter message" id="form-text" autofocus autocomplete="off">
       <input type="submit" name="sub-btn" id="sub-btn" value="Send">
     </div>
     <button type="button" id="geo-btn" name="button">Send location</button>
