--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-  </head>
-  <body>
-    <h2>Welcome to the Chat App</h2>
 
-    <div id="chat-form">
-      <input type="text" name="form-text" placeholder="Enter message" id="form-text" autofocus autocomplete="off">
-      <input type="submit" name="sub-btn" id="sub-btn" value="Send">
-    </div>
-    <button type="button" id="geo-btn" name="button">Send location</button>
+<head>
+  <meta charset="utf-8">
+  <title>Join | ChatApp</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="/css/styles.css">
+</head>
 
-    <ul id="chat-ul"></ul>
-  </body>
+<body class="centered-form">
+  <div class="centered-form__form">
+    <form action="/chat.html">
+      <div class="form-field">
+        <h3>Join a Chat<h3>
+      </div>
+      <div class="form-field">
+        <label>Display name</label>
+        <input type="text" name="name" autofocus/>
+      </div>
+      <div class="form-field">
+        <label>Room name</label>
+        <input type="text" name="room"/>
+      </div>
+      <div class="form-field">
+        <button>Join</button>
+      </div>
+    </form>
+  </div>
+</body>
+
 </html>
-
-<script src="/js/libs/jquery.min.js"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/index.js"></script>
