--- a/public/chat.html
+++ b/public/chat.html
@@ -32,6 +32,7 @@
 <script src="/js/libs/jquery.min.js"></script>
 <script src="/js/libs/mustache.min.js"></script>
 <script src="/js/chat.js"></script>
+<script src="/js/libs/deparam.js"></script>
 
 <script id="msg__temp" type="text/template">
   <li class="message">
